--- a/assets/bibliography/2018-12-22-distill.bib
+++ b/assets/bibliography/2018-12-22-distill.bib
@@ -1,7 +1,38 @@
-@article{gregor2015draw,
-  title={DRAW: A recurrent neural network for image generation},
-  author={Gregor, Karol and Danihelka, Ivo and Graves, Alex and Rezende, Danilo Jimenez and Wierstra, Daan},
-  journal={arXiv preprint, arXiv:1502.04623},
-  year={2015},
-  url={https://arxiv.org/pdf/1502.04623.pdf}
+@inproceedings{DBLP:conf/iclr/LoconteSM0SGV24,
+  author       = {Lorenzo Loconte and
+                  Aleksanteri M. Sladek and
+                  Stefan Mengel and
+                  Martin Trapp and
+                  Arno Solin and
+                  Nicolas Gillis and
+                  Antonio Vergari},
+  title        = {Subtractive Mixture Models via Squaring: Representation and Learning},
+  booktitle    = {The Twelfth International Conference on Learning Representations,
+                  {ICLR} 2024, Vienna, Austria, May 7-11, 2024},
+  publisher    = {OpenReview.net},
+  year         = {2024},
+  url          = {https://openreview.net/forum?id=xIHi5nxu9P},
+  timestamp    = {Mon, 29 Jul 2024 17:17:48 +0200},
+  biburl       = {https://dblp.org/rec/conf/iclr/LoconteSM0SGV24.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/uai/SladekTS25,
+  author       = {Aleksanteri M. Sladek and
+                  Martin Trapp and
+                  Arno Solin},
+  editor       = {Silvia Chiappa and
+                  Sara Magliacane},
+  title        = {Approximate Bayesian Inference via Bitstring Representations},
+  booktitle    = {Conference on Uncertainty in Artificial Intelligence, Rio Othon Palace,
+                  Rio de Janeiro, Brazil, 21-25 July 2025},
+  series       = {Proceedings of Machine Learning Research},
+  volume       = {286},
+  pages        = {3939--3957},
+  publisher    = {{PMLR}},
+  year         = {2025},
+  url          = {https://proceedings.mlr.press/v286/sladek25a.html},
+  timestamp    = {Mon, 18 Aug 2025 15:30:39 +0200},
+  biburl       = {https://dblp.org/rec/conf/uai/SladekTS25.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
